Changed internal referal links to work with portal live and added missing letter capitalization

--- a/site/start-project/project-submission.html
+++ b/site/start-project/project-submission.html
@@ -9,7 +9,7 @@
                         <label for="dfg-switch" class="bs4-d-flex bs4-align-items-center">
 
                             <div class="switch-label bs4-rounded-lg dfg-only-highlight">
-                                regular project
+                                Regular project
                             </div>
                             <div class="switch switch-container">
                                 <span class="slider bs4-rounded-lg"></span>
@@ -23,51 +23,51 @@
                 </div>
                 <ol class="bs4-list-group">
                     <li class="bs4-list-group-item">
-                        collect <a href="#project-questions">basic project information</a>
+                        Collect <a href="#project-questions">Basic project information</a>
                     </li>
                     <li class="bs4-list-group-item">
-                        <a href="/web/ncct/contact" target="_blank">contact us</a> and receive counselling
+                        <a href="/portal/web/ncct/contact" target="_blank">Contact us</a> and receive counselling
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        fill out a <a href="/web/ncct/downloads#submission-documents" target="_blank">Declaration of Intent</a>
+                        Fill out a <a href="/portal/web/ncct/downloads#submission-documents" target="_blank">Declaration of Intent</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        submit the Declaration of Intent to the <a href="mailto:WGI-NGS@dfg.de">DFG</a>
+                        Submit the Declaration of Intent to the <a href="mailto:WGI-NGS@dfg.de">DFG</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        register to the <a href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a>
+                        Register to the <a href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        <a href="/web/ncct/contact" target="_blank">contact the NCCT</a> and discuss the pre-filled counselling report
+                        <a href="/portal/web/ncct/contact" target="_blank">Contact the NCCT</a> and discuss the pre-filled counselling report
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        send a full application to the DFG including the counselling report
+                        Send a full application to the DFG including the counselling report
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        await approval by the DFG
+                        Await approval by the DFG
                     </li>
 
                     <li class="bs4-list-group-item no-dfg-only-display">
-                        request an offer from us
+                        Request an offer from us
                     </li>
                     <li class="bs4-list-group-item no-dfg-only-display">
-                        sign the offer and send it back
+                        Sign the offer and send it back
                     </li>
 
                     <li class="bs4-list-group-item">
-                        submit the filled <a href="/web/ncct/downloads#submission-documents" target="_blank">sample sheet</a> to us
+                        Submit the filled <a href="/web/ncct/downloads#submission-documents" target="_blank">sample sheet</a> to us
                     </li>
                     <li class="bs4-list-group-item">
-                        await sequencing analysis by us
+                        Await sequencing analysis by us
                     </li>
                     <li class="bs4-list-group-item">
-                        access the results via our portal
+                        Access the results via our portal
                     </li>
                     <li class="bs4-list-group-item no-dfg-only-display">
-                        process the invoice you recieve from us
+                        Process the invoice you recieve from us
                     </li>
                     <li class="bs4-list-group-item">
-                        send us your feedback
+                        Send us your feedback
                     </li>
                 </ol>
             </div>
