Changed images and internal links to work with portal-live

--- a/site/welcome/landing-page.html
+++ b/site/welcome/landing-page.html
@@ -5,48 +5,48 @@
             <div class="bs4-card-deck">
                 <div class="bs4-card">
                     <img alt="" class="bs4-card-img img-cover min-vh-50"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52101/UKT_MedMikrobiologie_8843-width-1779-height-1181.jpeg/ebdb21bd-a1a4-49c1-921e-1b790de609ba?t=1582016702120" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38513/our+center.jpeg/88b9992a-33f1-46ae-b185-1891ab0e50d5?t=1585832476000" />
                     <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                         <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                             <div class="bs4-card-text bs4-h2">Our Center</div>
                         </div>
-                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/our-center"
+                        <a href="https://portal.qbic.uni-tuebingen.de/portal/web/ncct/our-center"
                             class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
                 <div class="bs4-card">
                     <img alt="" class="bs4-card-img img-cover min-vh-50"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52776/submit_project.jpg/fb535fa5-0cf8-4e06-a03c-738e6f48df67?t=1582115515420" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38513/submit_project.jpg/6256e849-b5f1-4491-8c89-6943f797b082?t=1585832481000" />
                     <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                         <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                             <div class="bs4-card-text bs4-h2">Submit Your Project</div>
                         </div>
-                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/submit-your-project"
+                        <a href="https://portal.qbic.uni-tuebingen.de/portal/web/ncct/submit-your-project"
                             class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
                 <div class="bs4-card">
                     <img alt="" class="bs4-card-img img-cover min-vh-50"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/sequencing-solutions-genetics.jpg/6a78fe56-54a6-4412-8ea5-8e34ee1d9b94?t=1582813198222" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38513/sequencing-solutions.jpg/36ebe155-2305-4e6a-8269-8ebdc5bc8b6f?t=1585832481000" />
                     <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                         <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                             <div class="bs4-card-text bs4-h2">Sequencing Solutions</div>
                         </div>
-                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/sequencing-solutions"
+                        <a href="https://portal.qbic.uni-tuebingen.de/portal/web/ncct/sequencing-solutions"
                             class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
                 <div class="bs4-card">
                     <img alt="" class="bs4-card-img img-cover min-vh-50"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/55367/bioinformatics-services-genetics.jpg/3b1c5b42-dd57-4457-ad11-312d06c5124e?t=1582812776256" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38513/bioinformatics-services.jpg/46fc9e89-c288-46e1-aa9c-e5659176b6af?t=1585832475000" />
                     <div class="bs4-card-img-overlay bs4-d-flex bs4-align-items-center bs4-justify-content-center">
                         <div class="translucent-bg-container bs4-p-1 bs4-rounded-lg">
                             <div class="bs4-card-text bs4-h2">Bioinformatics Services</div>
                         </div>
-                        <a href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/bioinformatics-services"
+                        <a href="https://portal.qbic.uni-tuebingen.de/portal/web/ncct/bioinformatics-services"
                             class="bs4-stretched-link"></a>
                     </div>
                 </div>
