Changed internal referal links to finally work with portal-live for both switch states

--- a/site/start-project/project-submission.html
+++ b/site/start-project/project-submission.html
@@ -26,10 +26,11 @@
                         Collect <a href="#project-questions">Basic project information</a>
                     </li>
                     <li class="bs4-list-group-item">
-                        <a href="/portal/web/ncct/contact" target="_blank">Contact us</a> and receive counselling
+                        <a href="/portal/web/ncct/contact-us" target="_blank">Contact us</a> and receive counselling
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        Fill out a <a href="/portal/web/ncct/downloads#submission-documents" target="_blank">Declaration of Intent</a>
+                        Fill out a <a href="/portal/web/ncct/downloads#submission-documents" target="_blank">Declaration
+                            of Intent</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
                         Submit the Declaration of Intent to the <a href="mailto:WGI-NGS@dfg.de">DFG</a>
@@ -38,7 +39,8 @@
                         Register to the <a href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a>
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
-                        <a href="/portal/web/ncct/contact" target="_blank">Contact the NCCT</a> and discuss the pre-filled counselling report
+                        <a href="/portal/web/ncct/contact-us" target="_blank">Contact the NCCT</a> and discuss the
+                        pre-filled counselling report
                     </li>
                     <li class="bs4-list-group-item dfg-only-display">
                         Send a full application to the DFG including the counselling report
@@ -55,7 +57,8 @@
                     </li>
 
                     <li class="bs4-list-group-item">
-                        Submit the filled <a href="/web/ncct/downloads#submission-documents" target="_blank">sample sheet</a> to us
+                        Submit the filled <a href="/portal/web/ncct/downloads#submission-documents"
+                            target="_blank">sample sheet</a> to us
                     </li>
                     <li class="bs4-list-group-item">
                         Await sequencing analysis by us
