Replaced URLs to images hosted on Portal-Testing with portal-live links

--- a/site/our-center/cc-network.html
+++ b/site/our-center/cc-network.html
@@ -8,67 +8,28 @@
             <ul class="bs4-list-unstyled">
                 <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
                     <div class="bs4-h5 bs4-media-body"><a
-                            href="https://www.ngscn-ccu.uni-bonn.de/en/central-coordination-unit">CENTRAL COORDINATING
-                            UNIT</a></div>
+                            href="https://www.ngscn-ccu.uni-bonn.de/en/central-coordination-unit"
+                            target="_blank">CENTRAL COORDINATING UNIT</a></div>
                     <img alt="CCU Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCU_Bonn_Logo/e90df544-f10e-44ca-b6b1-ee3e35b5176c?t=1585734920269" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38626/CCU_Bonn_Logo.png/15701945-b3ba-463d-a37f-434e485c749d?t=1585832044000" />
                 </li>
                 <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME
-                            CENTER</a></div>
+                    <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en" target="_blank">WEST
+                            GERMAN GENOME CENTER</a></div>
                     <img alt="WGGC Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38626/WGGC+Bonn.png/99019402-8bc4-4dd4-a6b5-8c655f2ddcf2?t=1585832045000" />
                 </li>
                 <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-h5 bs4-media-body"><a
-                            href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a></div>
+                    <div class="bs4-h5 bs4-media-body"><a href="https://genomecenter.tu-dresden.de/about-us"
+                            target="_blank">DRESDEN-CONCEPT GENOME CENTER</a></div>
                     <img alt="DCGC Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38626/dresdenconcept.png/10a1e34f-7909-45a7-8d0a-56f35ab3d26a?t=1585832044000" />
                 </li>
                 <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-media-body bs4-h5"><a
-                            href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC
-                            ANALYSIS KIEL</a></div>
+                    <div class="bs4-media-body bs4-h5"><a href="https://www.ccga.uni-kiel.de/landing_page/about_us"
+                            target="_blank">COMPETENCE CENTRE FOR GENOMIC ANALYSIS KIEL</a></div>
                     <img alt="CCGA Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" />
-                </li>
-            </ul>
-        </div>
-    </div>
-</section>
-<section id="cc-network">
-    <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
-        <div class="section-title">&nbsp;</div>
-
-        <div class="bs4-text-center bs4-h2 ">The Competence-Center Network</div>
-
-        <div class="bs4-text-center">
-            <ul class="bs4-list-unstyled">
-                <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-h5 bs4-media-body"><a
-                            href="https://www.ngscn-ccu.uni-bonn.de/en/central-coordination-unit">CENTRAL COORDINATING
-                            UNIT</a></div>
-                    <img alt="CCU Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCU_Bonn_Logo/e90df544-f10e-44ca-b6b1-ee3e35b5176c?t=1585734920269" />
-                </li>
-                <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-media-body bs4-h5"><a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME
-                            CENTER</a></div>
-                    <img alt="WGGC Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" />
-                </li>
-                <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-h5 bs4-media-body"><a
-                            href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a></div>
-                    <img alt="DCGC Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" />
-                </li>
-                <li class="bs4-d-flex bs4-align-items-center bs4-my-5">
-                    <div class="bs4-media-body bs4-h5"><a
-                            href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC
-                            ANALYSIS KIEL</a></div>
-                    <img alt="CCGA Logo"
-                        src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" />
+                        src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38626/CCGA_Logo.png/f0fb03c0-e197-4f40-82f5-a63e0eb37e87?t=1585832044000" />
                 </li>
             </ul>
         </div>
