--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -8,11 +8,11 @@
             <div class="bs4-card bs4-p-3 bg-ncct">
                 <div class="bs4-card-deck">
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/7b4a0c5a-92e4-4844-861a-fd1eb156db00?t=1583168195776" />
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Olaf+Riess+Portrait.jpg/8360e72d-16ee-43d3-998a-c3c615eda51c?t=1585825395000" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="http://www.medgen-tuebingen.de/#langsel">Institute of Medical Genetics and
-                                    Applied Genomics</a></div>
+                                    href="http://www.medgen-tuebingen.de/#langsel" target="_blank">Institute of Medical
+                                    Genetics and Applied Genomics</a></div>
 
                             <div class="bs4-card-text">
                                 <p class="bs4-text-right bs4-font-italic">Prof. Olaf Riess, coordinator</p>
@@ -32,11 +32,11 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/Prof.+Julia+Stefanie+Frick+Portrait/ba153377-12cb-4de4-b301-af76b007e1db?t=1585237710880" />
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Julia-Stefanie-Frick-Portrait.png/bd94b567-4c37-4c07-92bf-f2cc405dbcf7?t=1586179165562" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="https://www.medizin.uni-tuebingen.de/de/en/Research/Institutes/Medical+Microbiology+and+Hygiene.html">Institute
-                                    of Medical Microbiology and Hygiene</a></div>
+                                    href="https://www.medizin.uni-tuebingen.de/de/en/Research/Institutes/Medical+Microbiology+and+Hygiene.html"
+                                    target="_blank">Institute of Medical Microbiology and Hygiene</a></div>
 
                             <div class="bs4-card-text">
                                 <p class="bs4-text-right bs4-font-italic ">Prof. Julia-Stefanie Frick</p>
@@ -56,11 +56,11 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/UNI_TUE_+QBIC_4719_FINAL_PRINT_RGB.jpg/2d98a90e-7e9d-43e8-8388-ae41a8014dc8?t=1583168195944" />
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Sven+Nahnsen+Portrait.jpg/aae86abb-fbf6-4e08-9d0f-bce4eaffa398?t=1585825395000" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html">Quantitative
-                                    Biology Center (QBiC)</a></div>
+                                    href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
+                                    target="_blank">Quantitative Biology Center (QBiC)</a></div>
 
                             <div class="bs4-card-text">
                                 <p class="bs4-text-right bs4-font-italic">Dr. Sven Nahnsen</p>
