--- a/site/our-center/ncct-contact.html
+++ b/site/our-center/ncct-contact.html
@@ -9,33 +9,30 @@
                 <div class="bs4-card bs4-border-0">
                     <div class="bs4-card-body"><img alt="Address"
                             class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-address.png/7b13ad9a-a287-4900-a46e-be149ebc8c19?t=1582555165611" />
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38622/contact-us-address.png/590ff15a-7896-4075-bf6c-4a04d25ac816?t=1585825478000" />
                         <div class="bs4-card-textbox bs4-mt-3">
                             <div class="bs4-card-title bs4-h4">Address</div>
 
                             <p class="bs4-card-text bs4-h6">NGS Competence Center Tübingen<br />
                                 Calwerstraße 7, 72076 Tübingen.</p>
                         </div>
-                        <a href="https://goo.gl/maps/J37UrVYNgUCZUtz76" target="_blank" class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
                 <div class="bs4-card bs4-border-0">
-                    <div class="bs4-card-body">
-                        <img alt="Email" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-email.png/be3150fe-1b7c-4a60-866c-faba396c32a9?t=1582555165334" />
+                    <div class="bs4-card-body"><img alt="Email" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38622/contact-us-email.png/f7f35b95-4703-4f99-830f-b227b96efc0a?t=1585825478000" />
                         <div class="bs4-card-textbox bs4-mt-3">
                             <div class="bs4-card-title bs4-h4">E-Mail</div>
 
                             <div class="bs4-card-subtitle bs4-h6 mb-2">ncct@med.uni-tuebingen.de</div>
                         </div>
-                        <a href="mailto:ncct@med.uni-tuebingen.de" class="bs4-stretched-link"></a>
                     </div>
                 </div>
 
                 <div class="bs4-card bs4-border-0">
                     <div class="bs4-card-body"><img alt="Phone" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-phone.png/d12edc10-dff5-432a-97ed-e5529583a5ba?t=1582555165420" />
+                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38622/contact-us-phone.png/2af864df-d3d5-4647-8d02-5d36a6d5038d?t=1585825479000" />
                         <div class="bs4-card-textbox bs4-mt-3">
                             <div class="bs4-card-title bs4-h4">Phone and Fax</div>
 
