Added Formatting and added 2nd feedback with restructured table labels

--- a/site/start-project/project-submission.html
+++ b/site/start-project/project-submission.html
@@ -1,77 +1,48 @@
-<section class="" id="project-submission">
-    <input type="checkbox" class="switch" id="dfg-switch" name="dfg-switch">
+<section id="project-submission"><input class="switch" id="dfg-switch" name="dfg-switch" type="checkbox" />
     <div class="bs4-container">
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="section-title">
                     <div class="bs4-h1">Project Submission</div>
+
                     <div class="bs4-d-flex bs4-justify-content bs4-align-items-center">
-                        <label for="dfg-switch" class="bs4-d-flex bs4-align-items-center">
+                        <div class="switch-label bs4-rounded-lg dfg-only-highlight"><label
+                                class="bs4-d-flex bs4-align-items-center" for="dfg-switch">Regular project </label>
+                        </div>
 
-                            <div class="switch-label bs4-rounded-lg dfg-only-highlight">
-                                Regular project
-                            </div>
-                            <div class="switch switch-container">
-                                <span class="slider bs4-rounded-lg"></span>
-                            </div>
-                            <div class="switch-label bs4-rounded-lg no-dfg-only-highlight">
-                                DFG project
-                            </div>
-                        </label>
+                        <div class="switch switch-container">&nbsp;</div>
+
+                        <div class="switch-label bs4-rounded-lg no-dfg-only-highlight"><label
+                                class="bs4-d-flex bs4-align-items-center" for="dfg-switch">DFG project </label></div>
                     </div>
-
                 </div>
+
                 <ol class="bs4-list-group">
-                    <li class="bs4-list-group-item">
-                        Collect <a href="#project-questions">Basic project information</a>
+                    <li class="bs4-list-group-item">Collect <a href="#project-questions">Basic project information</a>
                     </li>
-                    <li class="bs4-list-group-item">
-                        <a href="/portal/web/ncct/contact-us" target="_blank">Contact us</a> and receive counselling
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        Fill out a <a href="/portal/web/ncct/downloads#submission-documents" target="_blank">Declaration
-                            of Intent</a>
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        Submit the Declaration of Intent to the <a href="mailto:WGI-NGS@dfg.de">DFG</a>
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        Register to the <a href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a>
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        <a href="/portal/web/ncct/contact-us" target="_blank">Contact the NCCT</a> and discuss the
-                        pre-filled counselling report
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        Send a full application to the DFG including the counselling report
-                    </li>
-                    <li class="bs4-list-group-item dfg-only-display">
-                        Await approval by the DFG
-                    </li>
-
-                    <li class="bs4-list-group-item no-dfg-only-display">
-                        Request an offer from us
-                    </li>
-                    <li class="bs4-list-group-item no-dfg-only-display">
-                        Sign the offer and send it back
-                    </li>
-
-                    <li class="bs4-list-group-item">
-                        Submit the filled <a href="/portal/web/ncct/downloads#submission-documents"
-                            target="_blank">sample sheet</a> to us
-                    </li>
-                    <li class="bs4-list-group-item">
-                        Await sequencing analysis by us
-                    </li>
-                    <li class="bs4-list-group-item">
-                        Access the results via our portal
-                    </li>
-                    <li class="bs4-list-group-item no-dfg-only-display">
-                        Process the invoice you recieve from us
-                    </li>
-                    <li class="bs4-list-group-item">
-                        Send us your feedback
-                    </li>
+                    <li class="bs4-list-group-item"><a href="/portal/web/ncct/contact-us" target="_blank">Contact us</a>
+                        and receive counselling</li>
+                    <li class="bs4-list-group-item dfg-only-display">Fill out a <a
+                            href="/portal/web/ncct/downloads#submission-documents" target="_blank">Declaration of
+                            Intent</a></li>
+                    <li class="bs4-list-group-item dfg-only-display">Submit the Declaration of Intent to the <a
+                            href="mailto:WGI-NGS@dfg.de">DFG</a></li>
+                    <li class="bs4-list-group-item dfg-only-display">Register to the <a
+                            href="https://elan.dfg.de/my.policy" target="_blank">DFG portal</a></li>
+                    <li class="bs4-list-group-item dfg-only-display"><a href="/portal/web/ncct/contact-us"
+                            target="_blank">Contact the NCCT</a> and discuss the pre-filled counselling report</li>
+                    <li class="bs4-list-group-item dfg-only-display">Send a full application to the DFG including the
+                        counselling report</li>
+                    <li class="bs4-list-group-item dfg-only-display">Await approval by the DFG</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">Request an offer from us</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">Sign the offer and send it back</li>
+                    <li class="bs4-list-group-item">Submit the filled <a
+                            href="/portal/web/ncct/downloads#submission-documents" target="_blank">sample sheet</a> to
+                        us</li>
+                    <li class="bs4-list-group-item">Await sequencing analysis by us</li>
+                    <li class="bs4-list-group-item">Access the results via our portal</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">Process the invoice you recieve from us</li>
+                    <li class="bs4-list-group-item">Send us your feedback</li>
                 </ol>
             </div>
         </div>
