--- a/site/downloads/submission-documents.html
+++ b/site/downloads/submission-documents.html
@@ -14,13 +14,13 @@
             <div class="bs4-col-8 bs4-offset-2">
                 <ul class="bs4-list-group">
                     <li class="bs4-list-group-item"><a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/56545/Declaration+of+Intent.pdf/2dcf3813-3228-4e80-a683-159df6794e75">Declaration
-                            of Intent (DFG)</a></li>
+                            href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Declaration+of+Intent.pdf/c59a813b-178d-4d97-a3cc-0f0936ea4679"
+                            target="_blank">Declaration of Intent (DFG)</a></li>
                     <li class="bs4-list-group-item"><a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/56545/Proposal+Project+Recommendations.pdf/e606dec7-7c65-418b-815c-ec5461668377">Proposal
-                            Preparation Instructions (DFG)</a></li>
-                    <li class="bs4-list-group-item"><a href="https://github.com/qbicsoftware/metadata-doc">Project
-                            Sample Sheet</a></li>
+                            href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Proposal+Project+Recommendations.pdf/4aa71de8-083d-49fb-afd4-835c6e7d8fb9"
+                            target="_blank">Proposal Preparation Instructions (DFG)</a></li>
+                    <li class="bs4-list-group-item"><a href="https://github.com/qbicsoftware/metadata-doc"
+                            target="_blank">Project Sample Sheet</a></li>
                 </ul>
             </div>
         </div>
