Updated Link to Medicinal Microbiology and hygiene

--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -35,7 +35,7 @@
                             src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Julia-Stefanie-Frick-Portrait.png/bd94b567-4c37-4c07-92bf-f2cc405dbcf7?t=1586179165562" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="https://www.medizin.uni-tuebingen.de/de/en/Research/Institutes/Medical+Microbiology+and+Hygiene.html"
+                                    href="https://www.medizin.uni-tuebingen.de/de/das-klinikum/einrichtungen/institute/med-mikrobiologie-und-hygiene"
                                     target="_blank">Institute of Medical Microbiology and Hygiene</a></div>
 
                             <div class="bs4-card-text">
