Added Alert with Link to Covid Initiative and Bootstrap alert support

--- a/site/welcome/landing-page.html
+++ b/site/welcome/landing-page.html
@@ -1,5 +1,6 @@
-<!-- site: https://portal-testing.qbic.uni-tuebingen.de/web/ncct -->
+<!-- site: https://portal.qbic.uni-tuebingen.de/portal/web/ncct/ncct_welcome-->
 <section id="welcome">
+        <div class="bs4-alert bg-ncct bs4-text-center" role="alert"><a class="bs4-alert-link bs4-text-white bs4-h4 bs4-font-weight-bold" href="https://ngs-kn.de/?page_id=70">NCCT is a part of the German COVID-19 OMICS Initiative</a></div>
     <div class="bs4-pl-5 bs4-pr-5 bs4-p-sm-0">
         <div class="section-title bs4-w-100">
             <div class="bs4-card-deck">
