--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -39,9 +39,13 @@
                                     target="_blank">Institute of Medical Microbiology and Hygiene</a></div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic ">Prof. Julia-Stefanie Frick</p>
+                                <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Julia-Stefanie Frick</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
+                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke Peter,</a>
+
+                                <p>Clinical Microbiology</p>
+
                                 <a href="mailto:Angel.Angelov@med.uni-tuebingen.de">Dr. Angel Angelov,</a>
 
                                 <p>Lab Manager and Research Scientist</p>
