Add Dr. To Michael Sonnabend and changed job description of Angel as was detailed per Mail by MG

--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -48,8 +48,8 @@
 
                                 <a href="mailto:Angel.Angelov@med.uni-tuebingen.de">Dr. Angel Angelov,</a>
 
-                                <p>Lab Manager and Research Scientist</p>
-                                <a href="mailto:Michael.Sonnabend@med.uni-tuebingen.de">Michael Sonnabend,</a>
+                                <p>Bioinformatics Research Scientist</p>
+                                <a href="mailto:Michael.Sonnabend@med.uni-tuebingen.de">Dr. Michael Sonnabend,</a>
 
                                 <p>Coordinator and Research Scientist</p>
                                 <a href="mailto:Janina.Geißert@med.uni-tuebingen.de">Dr. Janina Geißert</a>
