Change title of marie gauder in the institute section as was requested by MG

--- a/site/our-center/institutes.html
+++ b/site/our-center/institutes.html
@@ -75,7 +75,7 @@
                                 <p>Coordinator Bioinformatics support</p>
                                 <a href="mailto:marie.gauder@qbic.uni-tuebingen.de">Marie Gauder, </a>
 
-                                <p>Project Manager and Bioinformatics Research Scientist</p>
+                                <p>Coordinator and Bioinformatics Research Scientist </p>
                             </div>
                         </div>
                     </div>
