--- a/site/welcome/alert.html
+++ b/site/welcome/alert.html
@@ -5,6 +5,6 @@
             src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38509/Covid+Initiative/5debb935-cd7f-4bc0-8a7c-63f9f9ffc3c0?t=1588846182429" />
         <div class="bs4-text-center bs4-h4 bs4-ml-3">NCCT is a part of the German COVID-19 OMICS Initiative:<br />
             <a class="bs4-alert-link bs4-h4 bs4-font-weight-bold" href="https://ngs-kn.de/?page_id=70"
-                target="_blank">https://ngs-kn.de/?page_id=70</a></div>
+                target="_blank">https://ngs-kn.de/</a></div>
     </div>
 </section>
