Replace Julia with Silke in our center and remove angel

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -8,11 +8,11 @@
             <div class="bs4-card bs4-p-3 bg-ncct">
                 <div class="bs4-card-deck">
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Olaf+Riess+Portrait.jpg/8360e72d-16ee-43d3-998a-c3c615eda51c?t=1585825395000" />
+                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/7b4a0c5a-92e4-4844-861a-fd1eb156db00?t=1583168195776" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
                                     href="http://www.medgen-tuebingen.de/#langsel" target="_blank">Institute of Medical
-                                    Genetics and Applied Genomics</a></div>
+                                    Genetics and Applied Genomics </a></div>
 
                             <div class="bs4-card-text">
                                 <p class="bs4-text-right bs4-font-italic">Prof. Olaf Riess, coordinator</p>
@@ -32,21 +32,17 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Julia-Stefanie-Frick-Portrait.png/bd94b567-4c37-4c07-92bf-f2cc405dbcf7?t=1586179165562" />
+                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/Silke+Peter+Portrait/3bfaa906-2e7a-4696-80f7-52f4c42f1a00?t=1625480710818" />
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
                                     href="https://www.medizin.uni-tuebingen.de/de/das-klinikum/einrichtungen/institute/med-mikrobiologie-und-hygiene"
                                     target="_blank">Institute of Medical Microbiology and Hygiene</a></div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Julia-Stefanie Frick</p>
+                                <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Silke Peter</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke Peter,</a>
-
-                                <p>Clinical Microbiology</p>
-
-                                <a href="mailto:Angel.Angelov@med.uni-tuebingen.de">Dr. Angel Angelov,</a>
+                                <a href="mailto:silke.peter@uni-tuebingen.de">Apl. Prof. Silke Peter</a>
 
                                 <p>Bioinformatics Research Scientist</p>
                                 <a href="mailto:Michael.Sonnabend@med.uni-tuebingen.de">Dr. Michael Sonnabend,</a>
@@ -60,9 +56,9 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Sven+Nahnsen+Portrait.jpg/aae86abb-fbf6-4e08-9d0f-bce4eaffa398?t=1585825395000" />
+                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/UNI_TUE_+QBIC_4719_FINAL_PRINT_RGB.jpg/2d98a90e-7e9d-43e8-8388-ae41a8014dc8?t=1583168195944" />
                         <div class="bs4-card-body bs4-text-left">
-                            <div class="bs4-card-title bs4-text-center bs4-h5"><a
+                            <div class="bs4-card-title bs4-text-center bs4-h5"><a _blank=""
                                     href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
                                     target="_blank">Quantitative Biology Center (QBiC)</a></div>
 
@@ -70,12 +66,9 @@
                                 <p class="bs4-text-right bs4-font-italic">Dr. Sven Nahnsen</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:stefan.czemmel@qbic.uni-tuebingen.de">Dr. Stefan Czemmel, </a>
-
-                                <p>Coordinator Bioinformatics support</p>
                                 <a href="mailto:marie.gauder@qbic.uni-tuebingen.de">Marie Gauder, </a>
 
-                                <p>Coordinator and Bioinformatics Research Scientist </p>
+                                <p>Coordinator and Bioinformatics Research Scientist</p>
                             </div>
                         </div>
                     </div>
