Adapt email of silke peters

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -42,7 +42,7 @@
                                 <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Silke Peter</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:silke.peter@uni-tuebingen.de">Apl. Prof. Silke Peter</a>
+                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke Peter</a>
 
                                 <p>Bioinformatics Research Scientist</p>
                                 <a href="mailto:Michael.Sonnabend@med.uni-tuebingen.de">Dr. Michael Sonnabend,</a>
