Adapt spacing for QBiC in Card listing

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -55,12 +55,12 @@
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
                             src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/UNI_TUE_+QBIC_4719_FINAL_PRINT_RGB.jpg/2d98a90e-7e9d-43e8-8388-ae41a8014dc8?t=1583168195944" />
                         <div class="bs4-card-body bs4-text-left">
-                            <div class="bs4-card-title bs4-text-center bs4-h5"><a _blank=""
+                            <div class="bs4-card-title bs4-text-center bs4-h5 bs4-mb-md-5"><a _blank=""
                                     href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
                                     target="_blank">Quantitative Biology Center (QBiC)</a></div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic">Dr. Sven Nahnsen</p>
+                                <p class="bs4-text-right bs4-font-italic bs4-mt-sm-n3">Dr. Sven Nahnsen</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
                                 <a href="mailto:marie.gauder@qbic.uni-tuebingen.de">Marie Gauder, </a>
